--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -347,6 +347,58 @@ bootstrap-decorator span {
 .color-picker-wrapper .input-group .input-group-addon:first-child {
   border-right-width: thin;
 }
+/*
+  Scrollable table
+*/
+table.scroll {
+  width: 100%;
+  border-spacing: 0;
+}
+
+table.scroll th,
+table.scroll td,
+table.scroll tr,
+table.scroll thead,
+table.scroll tbody { display: block; }
+
+table.scroll thead tr {
+  /* fallback */
+  width: 97%;
+  /* minus scroll bar width */
+  width: -webkit-calc(100% - 16px);
+  width:    -moz-calc(100% - 16px);
+  width:         calc(100% - 16px);
+}
+
+table.scroll tr:after {
+  content: ' ';
+  display: block;
+  visibility: hidden;
+  clear: both;
+}
+
+table.scroll tbody {
+  height: 340px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+table.scroll tbody td,
+table.scroll thead th {
+  width: 19%;
+  float: left;
+}
+
+thead tr th { 
+  height: 30px;
+  line-height: 30px;
+  /*text-align: left;*/
+}
+
+tbody td:last-child, thead th:last-child {
+  border-right: none !important;
+}
+/* end scroll table */
 
 /*
   It fixes intersection nav to include check icon
