--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -213,6 +213,7 @@
                        name="bands" 
                        ng-model="ctrl.view.bands" 
                        type="number"
+                       min="0"
                        ng-required="ctrl.viewDataSeries.data_series_semantics.data_series_type_name === ctrl.DataSeriesType.GEOMETRIC_OBJECT">
 
                 <span class="help-block" 
@@ -243,14 +244,19 @@
           </div>          
 
           <div class="col-md-2">
-            <button type="button" class="btn btn-primary" style="margin-top: 25px;" ng-bind="i18n.__('Generate')" data-ng-click="ctrl.generateColors();"></button>
+            <button type="button" 
+                    class="btn btn-primary" 
+                    style="margin-top: 25px;" 
+                    ng-bind="i18n.__('Generate')" 
+                    data-ng-click="ctrl.view.typeId && ctrl.colors.length > 0 && ctrl.generateColors();"></button>
           </div>
         </div>
-        <div class="col-md-12" ng-show="ctrl.view.typeId">
+        <div class="col-md-12" ng-show="ctrl.view.typeId && ctrl.colors.length > 0">
           <table class="table table-hover scroll">
             <thead>
               <th ng-bind="i18n.__('Color')"></th>
               <th ng-bind="i18n.__('Title')"></th>
+              <th ng-bind="i18n.__('Value')"></th>
             </thead>
             <tbody>
               <tr ng-repeat="elm in ctrl.colors track by $index">
@@ -259,6 +265,9 @@
                 </td>
                 <td>
                   <input type="text" class="form-control" name="field_color_{{ $index }}" ng-model="elm.title">
+                </td>
+                <td>
+                  <input type="text" class="form-control" name="field_value_{{ $index }}" ng-model="elm.value">
                 </td>
               </tr>
             </tbody>
