Working on legend for View

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -334,7 +334,7 @@ bootstrap-decorator span {
 .terrama2-link-disabled {
   cursor: not-allowed;
 }
-
+/*
 .color-picker-wrapper .input-group .color-picker-input-swatch {
   display: none !important;
 }
