--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -248,7 +248,7 @@
                     class="btn btn-primary" 
                     style="margin-top: 25px;" 
                     ng-bind="i18n.__('Generate')" 
-                    data-ng-click="ctrl.view.typeId && ctrl.colors.length > 0 && ctrl.generateColors();"></button>
+                    data-ng-click="ctrl.view.typeId && ctrl.generateColors();"></button>
           </div>
         </div>
         <div class="col-md-12" ng-show="ctrl.view.typeId && ctrl.colors.length > 0">
